[package]
name = "this-blockchain"
version = "0.1.0"
authors = ["suiGn <admin@neurons.me>"]
edition = "2021"
description = "This.Blockchain Data Structure."
license = "MIT OR Apache-2.0"
repository = "https://github.com/neurons-me/this.audio"
homepage = "https://neurons.me"
readme = "README.md"
keywords = ["blockchain", "Data"]
categories = ["blockchain", "crypto", "decentralization"]
[dependencies]
